--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: AI4BC-21
+title: AI4BC-23
 email: ai4behaviorchange@gmail.com
-description: The AAAI-21 Workshop on AI For Behavior Change held at the Thirty-Fifth AAAI Conference on Artificial Intelligence (AAAI-21)
+description: The AAAI-23 Workshop on AI For Behavior Change held at the Thirty-Seventh AAAI Conference on Artificial Intelligence (AAAI-23)
 #Testing how this works.
-baseurl: "/ai4bc21" # the subpath of your site, e.g. /blog
+baseurl: "/ai4bc23" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
@@ -38,6 +38,6 @@ kramdown:
     auto_ids: true
 
 # ensures that there are no additional header pages
-header_pages:
-  - schedule.md
-  - posters.md
+#header_pages:
+ # - schedule.md
+ # - posters.md
